module/core/mod_interface/tests/inc/front/layer_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`
 --> tests/inc/front/layer_unknown_vis/mod.rs
  |
  |   xyz layer layer_a;
  |   ^^^
